add nextauthinternal .env

--- a/.env
+++ b/.env
@@ -13,5 +13,6 @@ collectionname=recipe collection
 # NEXT_AUTH
 NEXTAUTH_SECRET=1wYycKZBZSB8XjZZLu8Ri1oN5QfBhWZKqjVpIgm7Dh8
 NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL_INTERNAL=http://localhost:3000
 
 API_URL=http://localhost:3000
